--- a/todoapp-frontend/src/App.css
+++ b/todoapp-frontend/src/App.css
@@ -1,42 +1,38 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.main-container {
+  width: 100%;
+  height: 100vh;
+  border: 2px solid black;
+  border-radius: 12px;
+  background-color: rgb(205, 236, 245);
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header {
+  width: 100%;
+  height: 80px;
+  border-bottom: 2px solid black;
+  background-color: lightblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 12px 12px 0 0;
+  flex-shrink: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.header-h1 {
+  font-size: 2rem;
+  font-weight: 700;
+  margin: 0;
 }
 
-.card {
-  padding: 2em;
+.main-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 32px 20px 20px 20px;
+  overflow: hidden;
+  align-items: center;
 }
-
-.read-the-docs {
-  color: #888;
-} */
